<resources>
    <string name="app_name">Bookting</string>

    <string name="id">아이디</string>
    <string name="id_join">4~8자리 숫자, 영문 대,소문자로 구성해주세요</string>
    <string name="pw">비밀번호</string>
    <string name="pw_join">8~16자리 숫자, 영문 대,소문자를 포함해주세요</string>
    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="nickname">닉네임</string>
    <string name="nickname_duplicate">이미 가입된 닉네임입니다</string>
    <string name="woman">여</string>
    <string name="man">남</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="success">성공</string>
    <string name="fail">실패</string>
    <string name="best_seller">베스트셀러</string>
    <string name="best_seller_emoji">&#128077;</string>
    <string name="new_book">신간</string>
    <string name="new_book_emoji">&#127381;</string>
    <string name="search_book">도서검색</string>
    <string name="search_book_emoji">&#128269;</string>
    <string name="back_press_exit">한번 더 누르시면 앱을 종료합니다</string>

    <!--msg-->
    <string name="success_add_msg">성공적으로 추가했습니다</string>
    <string name="join_msg">책킹의 회원이 되신 걸\n환영합니다 &#128142;</string>

    <!--emoji-->
    <string name="emoji_books">&#128218;</string>
    <string name="emoji_eyes">&#128064;</string>
    <string name="emoji_blue_book">&#128216;</string>

    <!--err-->
    <string name="login_err_title">로그인 실패</string>
    <string name="login_err_msg_expire">토큰이 만료되어\n로그인 화면으로 이동합니다.</string>
    <string name="login_err_msg">아이디 혹은 비밀번호를 확인해주세요</string>

    <string name="join_err_title">회원가입 실패</string>
    <string name="join_err_msg">회원가입에 실패했습니다.\n잠시 후 시도해주세요</string>
    <string name="add_book_err_msg">추가에 실패했습니다</string>


    <!--Tab-->
    <string name="tab_home">홈</string>
    <string name="tab_list">책장</string>
    <string name="tab_search">검색</string>
    <string name="tab_setting">설정</string>

    <!--list-->
    <string name="appbar_best_seller">&#127881; 베스트셀러 TOP 10</string>
    <string name="appbar_new_book">&#10024; 신간</string>

    <string name="banner_record_more">더 많은 컨텐츠를 위해\n읽었던 책을 기록해주세요</string>

    <string name="home_recommend">이런 책도\n읽어보셨나요?</string>

    <string name="login_success">로그인에 성공하였습니다</string>
    <string name="login_fail">로그인에 실패했습니다</string>

    <string name="home_recomm_1">%1$s님,\n오늘은 어떤 책을 기록하고 싶으신가요?</string>
    <string name="home_recomm_2">%1$s님,\n최근에 어떤 책을 읽으셨나요?</string>

    <string name="home_book_analy">이번주는 %1$d권을 기록하셨어요 &#128079;</string>
    <string name="add_book">추가</string>
    <string name="input_memo">메모를 입력해주세요</string>
    <string name="detail_book_info">상세 정보</string>
    <string name="isbn">ISBN</string>
    <string name="publish_date">출간일</string>
    <string name="publisher">출판사</string>
    <string name="author">저자</string>
    <string name="no_info">-</string>

    <!--add Book-->
    <string name="already_read">이미 읽은</string>
    <string name="wish_read">읽고 싶은</string>
    <string name="select_one_more_tag">태그를 선택해주세요(최대 5개)</string>


    <!--책장-->
    <string name="shelf_title_by_user">%1$s님의 서재</string>
    <string name="shelf_count">총 %1$d권을 기록했어요 &#9997;</string>
    <string name="shelf_empty">&#128580; 책장이 비어있어요\n</string>

    <!--검색-->
    <string name="search_hint">검색어를 입력하세요</string>


    <!--setting-->
    <string name="setting_book">&#128218; 도서 관리</string>
    <string name="already_book">이미 읽은 책</string>
    <string name="wish_book">읽고 싶은 책</string>

    <string name="notice">공지사항</string>
    <string name="faq">자주 묻는 질문</string>
    <string name="cs">문의하기</string>
    <string name="policy">이용약관</string>
    <string name="policy_personal">개인정보 처리방침</string>
    <string name="policy_open_source">오픈소스 라이센스</string>
    <string name="version_info">버전정보</string>
    <string name="who_is_develop">개발자정보</string>
    <string name="leave_chaeking"><u>회원탈퇴</u></string>


</resources>