<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="version"
            type="String" />

        <variable
            name="activity"
            type="com.bookting.view.setting.dot.ThreeDotActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMarginStart"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="@dimen/appBarTop"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.bookting.ui.ArrowItem
            android:id="@+id/notice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:onClick="@{()->activity.moveToPage(0)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:setTxt="@string/notice" />

        <com.bookting.ui.ArrowItem
            android:id="@+id/faq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{()->activity.moveToPage(1)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notice"
            app:setTxt="@string/faq" />

        <com.bookting.ui.ArrowItem
            android:id="@+id/cs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{()->activity.moveToPage(2)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/faq"
            app:setTxt="@string/cs" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/detail_margin"
            android:layout_marginTop="@dimen/detail_margin"
            android:layout_marginEnd="@dimen/detail_margin"
            android:background="@drawable/divider_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cs" />

        <com.bookting.ui.ArrowItem
            android:id="@+id/policy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:onClick="@{()->activity.moveToPage(3)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:setTxt="@string/policy" />

        <com.bookting.ui.ArrowItem
            android:id="@+id/aboutUs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="@{()->activity.moveToPage(4)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/policy"
            app:setTxt="@string/who_is_develop" />

        <com.bookting.ui.LineEndTxt
            android:id="@+id/aboutVersion"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:onClick="@{()->activity.moveToPage(5)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutUs"
            app:setEndTxt="@{version}"
            app:setTxt="@string/version_info" />


        <TextView
            style="@style/Normal15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{()->activity.moveToPage(6)}"
            android:text="@string/leave_chaeking"
            android:textColor="@color/grey600"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/aboutVersion" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>