<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.bookting.view.setting.SettingFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/btnMore"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/ic_three_dot"
            android:onClick="@{()->fragment.moveThreeDot()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@color/grey200" />

        <TextView
            android:id="@+id/tvName"
            style="@style/Bold18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/imgProfile"
            app:layout_constraintTop_toTopOf="@id/imgProfile"
            tools:text="user" />

        <ImageView
            android:id="@+id/nickMore"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/arrow_next_16"
            app:layout_constraintBottom_toBottomOf="@id/tvName"
            app:layout_constraintStart_toEndOf="@id/tvName"
            app:layout_constraintTop_toTopOf="@id/tvName" />

        <TextView
            android:id="@+id/tvEmail"
            style="@style/Normal15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toEndOf="@id/imgProfile"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="email@email.com" />

        <TextView
            android:id="@+id/header"
            style="@style/HeaderSetting"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:text="@string/setting_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgProfile" />

        <com.bookting.ui.ArrowItem
            android:id="@+id/already"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{()->fragment.moveTo(0)}"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:setTxt="@string/already_book" />

        <com.bookting.ui.ArrowItem
            android:id="@+id/wish"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{()->fragment.moveTo(1)}"
            app:layout_constraintTop_toBottomOf="@id/already"
            app:setTxt="@string/wish_book" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>